Fixed problems in views and created coffeescripts

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
 
       <ul class="right hide-on-med-and-down">
         <% if current_user %>
-          <li><a href="/users/edit">Profile</a></li>
+          <li><a href="<%= edit_user_registration_path %>">Profile</a></li>
           <li>
             <a href="#" class='dropdown-button' data-activates='teams' data-beloworigin="true" alignment='left'>My Teams<i class="material-icons right">arrow_drop_down</i></a>
             <ul id="teams" class="dropdown-content">
