--- a/app/views/teams/_add_modal.html.erb
+++ b/app/views/teams/_add_modal.html.erb
@@ -1,7 +1,7 @@
 <div id="add_team_modal" class="modal">
   <div class="modal-content">
     <div class="row">
-      <%= form_tag(controller: "teams", action: "create", method: "create", class: "col s12") do %>
+      <%= form_tag(controller: "/teams", action: "create", class: "col s12") do %>
         <div class="row">
           <div class="col s12">
             <h4>Add a new Team</h4>
