Add test to the feature of send message to a channel

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="input-field col s12">
             <i class="material-icons prefix">mode_edit</i>
-            <textarea class="materialize-textarea new_message"></textarea>
+            <textarea id="new_message" class="materialize-textarea new_message"></textarea>
             <label for="icon_prefix2">Send a Message...</label>
           </div>
         </div>
