--- a/app/views/teams/_sidebar.html.erb
+++ b/app/views/teams/_sidebar.html.erb
@@ -49,7 +49,7 @@
             <div class="divider"></div>
          </li>
          <li class="">
-            <div class="collapsible-header"><i class="material-icons">account_box</i>Users</div>
+            <div class="collapsible-header"><i id="channel_users" class="material-icons">account_box</i>Users</div>
             <div class="collapsible-body list" style="display: none;">
                <span>
                   <span>
@@ -61,7 +61,7 @@
                         <% if user != current_user %>
                         <li class="user_<%= user.id %>">
                            <div>
-                              <a href="#" id="<%= user.id %>" class="open_user">
+                              <a href="#" id="user_<%= user.id %>" class="open_user">
                                 <span id="<%= user.id %>"><%= user.name %></span>
                               </a>
                               <% if can? :destroy, @team %>
