Add test for delete team feature

--- a/app/views/teams/_sidebar.html.erb
+++ b/app/views/teams/_sidebar.html.erb
@@ -4,7 +4,7 @@
          <span class="team_title"><%= @team.slug %></span>
          <% if can? :destroy, @team %>
          <a class="right team_icon remove_team" href="#">
-         <i class="material-icons" id="<%= @team.id %>">settings</i>
+         <i class="material-icons team_settings" id="<%= @team.id %>">settings</i>
          </a>
          <% end %>
       </div>
