--- a/app/views/teams/_remove_modal.html.erb
+++ b/app/views/teams/_remove_modal.html.erb
@@ -8,7 +8,7 @@
             <p>Are you sure you want to delete the team?</p>
           </div>
           <div class="input-field col s12">
-            <%= submit_tag("Remove", class: "btn red right") %>
+            <%= submit_tag("Remove", id: "delete_team", class: "btn red right") %>
           </div>
         </div>
       <% end %>
