--- a/app/views/teams/_sidebar.html.erb
+++ b/app/views/teams/_sidebar.html.erb
@@ -16,7 +16,10 @@
       <!-- <span class="channel_title">Channels</span> -->
       <ul class="collapsible" data-collapsible="accordion">
          <li>
-            <div class="collapsible-header"><i class="material-icons">list</i>Channels</div>
+            <div id="team_channels" class="collapsible-header">
+              <i class="material-icons">list</i>
+              Channels
+            </div>
             <div class="collapsible-body list">
                <span>
                   <ul class="channels">
