Added test fro delete channel feature

--- a/app/views/channels/_remove_modal.html.erb
+++ b/app/views/channels/_remove_modal.html.erb
@@ -9,7 +9,7 @@
           </div>
           <div class="input-field col s12">
             <input type="hidden" name="channel_remove_id" id="channel_remove_id">
-            <%= submit_tag("Remove", class: "btn red right") %>
+            <%= submit_tag("Remove", id: "delete_channel", class: "btn red right") %>
           </div>
         </div>
       <% end %>
