--- a/app/views/teams/_sidebar.html.erb
+++ b/app/views/teams/_sidebar.html.erb
@@ -31,7 +31,7 @@
                            </a>
                            <% if can? :destroy, channel %>
                            <a class="right remove_channel" href="#" id="<%= channel.id %>">
-                           <i class="material-icons" id="<%= channel.id %>">settings</i>
+                           <i class="material-icons channel_<%= channel.id %>_settings" id="<%= channel.id %>">settings</i>
                            </a>
                            <% end %>
                         </div>
