Add test to invite user feature

--- a/app/views/team_users/_add_modal.html.erb
+++ b/app/views/team_users/_add_modal.html.erb
@@ -10,7 +10,7 @@
             <%= hidden_field(:team_user, :team_id) %>
             <%= text_field(:team_user, :email) %>
             <%= label_tag(:email, "User Email") %>
-            <%= submit_tag("Add User", class: "btn right") %>
+            <%= submit_tag("Add User", id: "add_user_btn", class: "btn right") %>
           </div>
         </div>
       <% end %>
