Add test for remove user from team feature

--- a/app/views/team_users/_remove_modal.html.erb
+++ b/app/views/team_users/_remove_modal.html.erb
@@ -9,7 +9,7 @@
           </div>
           <div class="input-field col s12">
             <input type="hidden" name="user_remove_id" id="user_remove_id">
-            <%= submit_tag("Remove", class: "btn red right") %>
+            <%= submit_tag("Remove", id: "remove_user_btn", class: "btn red right") %>
           </div>
         </div>
       <% end %>
